--- a/about-us.html
+++ b/about-us.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./img/logo-thumb.png" type="image/x-icon" />
+
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -24,23 +26,23 @@
         </div>
 
         <div class="row align-items-center header-content">
-          <div class="col-5 order-xl-0 order-1">
+          <div class="col-xl-5 col-8 order-xl-0 order-1">
             <nav class="nav-menu">
               <ul class="nav-list">
                 <li class="nav-item">
                   <a href="index.html" class="nav-link">Home </a>
                 </li>
                 <li class="nav-item">
-                  <a href="#featured" class="nav-link">Featured</a>
+                  <a href="product-ring.html" class="nav-link">Products</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#products" class="nav-link">Products</a>
+                  <a href="about-us.html" class="nav-link">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#new" class="nav-link">New</a>
+                  <a href="contact.html" class="nav-link">Contact</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#cate" class="nav-link"
+                  <a href="category.html" class="nav-link"
                     >Categories
                     <i class="fa fa-angle-down" data-toggle="dropdown"></i>
                   </a>
@@ -67,13 +69,13 @@
 
           <div class="col-2 order-xl-1 order-0">
             <a href="index.html" class="nav-logo">
-              <img src="./img/logo.png" alt="" />
+              <!-- <img src="./img/logo.png" alt="" /> -->
             </a>
           </div>
-          <div class="col-5 order-xl-2 order-2">
+          <div class="col-xl-5 col-2 order-xl-2 order-2">
             <div class="nav-btns">
               <!-- Theme change btns -->
-              <!-- <i class="bx bx-moon change-theme" id="theme-button"></i> -->
+              <i class="bx bx-moon change-theme" id="theme-button"></i>
 
               <div class="nav-search" id="search">
                 <i class="bx bx-search"></i>
@@ -108,91 +110,14 @@
       <h2 class="cart__title-center">My Cart</h2>
 
       <div class="cart__container">
-        <article class="cart__card">
-          <div class="cart__box">
-            <img src="./img/pd-1.png" alt="" class="cart__img" />
-          </div>
-
-          <div class="cart__details">
-            <h3 class="cart__title">Jazzmaster</h3>
-            <span class="cart__price">$1050</span>
-
-            <div class="cart__amount">
-              <div class="cart__amount-content">
-                <span class="cart__amount-box">
-                  <i class="bx bx-minus"></i>
-                </span>
-
-                <span class="cart__amount-number">1</span>
-
-                <span class="cart__amount-box">
-                  <i class="bx bx-plus"></i>
-                </span>
-              </div>
-
-              <i class="bx bx-trash-alt cart__amount-trash"></i>
-            </div>
-          </div>
-        </article>
-
-        <article class="cart__card">
-          <div class="cart__box">
-            <img src="./img/pd-2.png" alt="" class="cart__img" />
-          </div>
-
-          <div class="cart__details">
-            <h3 class="cart__title">Rose Gold</h3>
-            <span class="cart__price">$850</span>
-
-            <div class="cart__amount">
-              <div class="cart__amount-content">
-                <span class="cart__amount-box">
-                  <i class="bx bx-minus"></i>
-                </span>
-
-                <span class="cart__amount-number">1</span>
-
-                <span class="cart__amount-box">
-                  <i class="bx bx-plus"></i>
-                </span>
-              </div>
-
-              <i class="bx bx-trash-alt cart__amount-trash"></i>
-            </div>
-          </div>
-        </article>
-
-        <article class="cart__card">
-          <div class="cart__box">
-            <img src="./img/pd-3.png" alt="" class="cart__img" />
-          </div>
-
-          <div class="cart__details">
-            <h3 class="cart__title">Longines Rose</h3>
-            <span class="cart__price">$980</span>
-
-            <div class="cart__amount">
-              <div class="cart__amount-content">
-                <span class="cart__amount-box">
-                  <i class="bx bx-minus"></i>
-                </span>
-
-                <span class="cart__amount-number">1</span>
-
-                <span class="cart__amount-box">
-                  <i class="bx bx-plus"></i>
-                </span>
-              </div>
-
-              <i class="bx bx-trash-alt cart__amount-trash"></i>
-            </div>
-          </div>
-        </article>
+        <!-- cart card -->
       </div>
 
       <div class="cart__prices">
-        <span class="cart__prices-item">3 items</span>
-        <span class="cart__prices-total">$2880</span>
+        <span class="cart__prices-item">Total</span>
+        <span class="cart__prices-total"
+          >$ <span class="cart-total"></span>
+        </span>
       </div>
     </div>
     <!-- MAIN -->
@@ -312,19 +237,23 @@
             <div class="col-md-6">
               <div class="achievement-data">
                 <div class="achievement-data-item">
-                  <div class="achievement-data-number">50</div>
+                  <div class="achievement-data-number" data-val="50">00</div>
                   <div class="achievement-data-name">Hours per week</div>
                 </div>
                 <div class="achievement-data-item">
-                  <div class="achievement-data-number">15,102</div>
+                  <div class="achievement-data-number" data-val="1010">
+                    0000
+                  </div>
                   <div class="achievement-data-name">Line of code</div>
                 </div>
                 <div class="achievement-data-item">
-                  <div class="achievement-data-number">250</div>
+                  <div class="achievement-data-number" data-val="250">000</div>
                   <div class="achievement-data-name">Projects completed</div>
                 </div>
                 <div class="achievement-data-item">
-                  <div class="achievement-data-number gold">550</div>
+                  <div class="achievement-data-number gold" data-val="550">
+                    000
+                  </div>
                   <div class="achievement-data-name">Awards</div>
                 </div>
               </div>
@@ -332,6 +261,8 @@
           </div>
         </div>
       </section>
+
+      <section class="team-member"></section>
     </main>
 
     <!-- FOOTER -->
@@ -460,9 +391,7 @@
       </div>
       <div class="container-fluid footer-bottom">
         <div class="container">
-          <p class="footer-copyright">
-            © 2023 Goldish - WordPress Theme by Webdigify
-          </p>
+          <p class="footer-copyright">© 2023 Goldish</p>
         </div>
       </div>
     </footer>
